# FalconPub

./: .gitignore  LICENSE  README.md
falcon-rust/: Cargo.toml  check_output.txt  check_output_utf8.txt  schema.sql
falcon-rust/src/: api.rs  crypto.rs  main.rs  models.rs
falcon-rust/src/activitypub/: actor.rs  inbox.rs  outbox.rs  webfinger.rs
falcon-web/src/: index.css
falcon-web/src/components/: ChannelView.tsx  ConvoThread.tsx  DMsView.tsx  Layout.tsx  LinearSiv.tsx
falcon-web/src/components/siv/: AiSivCard.tsx
falcon-web/src/lib/: atp.ts  backendApi.ts
